--- a/public/styles.css
+++ b/public/styles.css
@@ -1,2 +1,3 @@
 body { font-family: Arial, Helvetica, sans-serif; } a { color: white;
-text-decoration: none; background-color: black; padding: 20px; display: block; }
+text-decoration: none; background-color: black; padding: 20px; } input, a,
+select { display: block; margin-top: 10px; margin-bottom: 10px; }
